1999-11-01  Gerd Moellmann  <gerd@gnu.org>

	* xfns.c (png_load) [PNG_READ_sRGB_SUPPORTED]: Put code using 
	png_get_sRGB in #ifdef.

	* dispnew.c (Finternal_show_cursor): Renamed from Fshow_cursor.
	(syms_of_display): Use the new name.

	* textprop.c (verify_interval_modification): Signal text-read-only
	instead of calling error.

	* data.c (Qtext_read_only): New built-in error.
	(syms_of_data): Initialize it.

	* lisp.h: Add extern declaration for Qtext_read_only.

	* syntax.c: Remove whitespace after open or in front of closing
	parentheses.

1999-10-31  Gerd Moellmann  <gerd@gnu.org>

	* xdisp.c (resize_mini_window): Compute needed height differently.

	* fns.c (Flength): Unroll loop over lists.

	* xdisp.c (append_space): Return non-zero if space was appended.
	(display_line): Set charpos of first glyph to -1 only if that
	glyph is the space added by append_glyph.

1999-10-29  Kenichi Handa  <handa@etl.go.jp>

	* coding.c (code_convert_region): Update `dst' correctly.

1999-10-28  Richard M. Stallman  <rms@caffeine.ai.mit.edu>

	* regex.c (POP_FAILURE_POINT): Use failure_id.integer
	as arg to DEBUG_POP and DEBUG_PRINT.

1999-10-28  Gerd Moellmann  <gerd@gnu.org>

	* fns.c (Fmemq, Fassq, Frassq, assq_no_quit, Fassoc)
	(Frassoc): Rewritten.

1999-10-27  Noah Friedman  <friedman@splode.com>

	* s/gnu-linux.h [HAVE_DEV_PTMX]: Redefine FIRST_PTY_LETTER to 'z'.
	Define PTY_NAME_SPRINTF.
	Redefine PTY_TTY_NAME_SPRINTF.
	* config.in: Add undef for HAVE_DEV_PTMX.

1999-10-27  Richard M. Stallman  <rms@caffeine.ai.mit.edu>

	* data.c (Qad_activate_internal): Renamed from Qad_activate.
	(Ffset): Call Qad_activate_internal.
	(syms_of_data): Initialize Qad_activate_internal.

1999-10-27  Gerd Moellmann  <gerd@gnu.org>

	* xdisp.c (echo_area_display) [HAVE_X_WINDOWS]: Do nothing if
	Vterminal_frame is selected and Vwindow_system is non-nil.

1999-10-26  Gerd Moellmann  <gerd@gnu.org>

	* xdisp.c (echo_area_display): Put previous change in #if 0.
